# Angry-HEX

./: .gitignore  INSTALL.md  INSTALLATION  LICENSE  Makefile  README.md  angryhex.sh  angryhex.sh.readme.md  build.xml  config.properties  config.properties.tournament  dev.angryhex.sh  old.angryhex.sh  version_info
dlv/: README.md  algorithm-new.dlv  algorithm-white.dlv  algorithm.dlv  asparse.dlv  calibrate.dlv  strategy.dlv  tactic-facts.dlv  tactic-white.dlv  tactic.dlv
docs/: README.md  _config.yml  index.md
framework/: Changelist  LICENSE  README.md  Readme(Server_Client)  SourceFilesDescription.txt
framework/plugin/: manifest.json  script.js  style.css
framework/src/ab/demo/: ClientNaiveAgent.java  LoadLevelAgent.java  MainEntry.java  NaiveAgent.java  ShootingAgent.java  abClientExample.cpp  abTrajectory.java
framework/src/ab/demo/other/: ActionRobot.java  ClientActionRobot.java  ClientActionRobotJava.java  Env.java  LoadLevelSchema.java  RestartLevelSchema.java  ShootingSchema.java  Shot.java
framework/src/ab/planner/: TrajectoryPlanner.java  abTrajectory.java
framework/src/ab/server/: Proxy.java  ProxyMessage.java
framework/src/ab/utils/: ABUtil.java  GameImageRecorder.java  ImageSegFrame.java  StateUtil.java  VisionPerformanceTest.java
framework/src/ab/vision/: ABObject.java  ABShape.java  ABType.java  BirdType.java  GameStateExtractor.java  ShowSeg.java  TestVision.java  Vision.java  VisionMBR.java  VisionRealShape.java  VisionUtils.java
framework/src/ab/vision/real/: ConnectedComponent.java  ImageSegmenter.java  LineSegment.java
scripts/: client.sh  initenv.sh  install-abirdsplugin.sh  install-angryhex.sh  install-box2d.sh  install-hex.sh  install-opencv.sh  install-update.sh  pkg-agent.sh  provide-agent.sh  provide-plugin.sh  rebuild.sh  server.sh  update-angryhex-agent.sh
src/: README.md
src/angrybirds-box2dplugin/: Makefile  Makefile.am  Makefile.in  aclocal.m4  bootstrap.sh  compile.sh  config.h  configure  configure.ac  libdlvhexplugin-hexagentplugin.cpp
src/angrybirds-box2dplugin/m4/: dlvhex.m4
src/angryhexclient/: Configuration.java  HexActionRobot.java  HexAgent.java  HexMainEntry.java  Memory.java  OurVision.java  OurVisionFact.java  Reasoner.java  TargetReasoner.java  TerminateAgentException.java  VisionFact.java  WrongScreenshotException.java
src/angryhexclient/strategy/: BenchmarkStrategy.java  DeclarativeStrategy.java  JavaStrategy.java  StrategyManager.java  StrategyReasoner.java
src/angryhexclient/tactic/: DeclarativeTactic.java  Tactic.java  TacticManager.java
src/angryhexclient/util/: DebugUtils.java  HTMLUtil.java  LogFormatter.java  OutConsoleHandler.java  Utils.java
(+8 files in other folders)
